- Fixed "unexpected URL" errors for Cisco AnyConnect clients
- Fixed the 'ping-leases' option, which was broken since version 1.1.1
- Fixed 'iroute' option processing to handle multiple routes (#625)
- occtl: fix invalid JSON output in `occtl -j show iroutes` (#661)
- occtl: fix regression with trailing commas in `occtl -j show sessions` (#669)
- Fixed DTLS not working with systemd socket activation (#647)

* Version 1.3.0 (released 2024-05-05)
- Switch to https://github.com/nodejs/llhttp from http-parser.
  http-parser was a liability as an unmaintained project (#598)
- Bump the number of groups per account from 128 to 512 (#219)
- Allow connecting users to select an authgroup by appending the
  group name to the URL, as in https://vpn.example.com/groupname;
  this introduces the select-group-by-url config option (#597).
- Informational messages due to configuration loading are not printed
  during worker initialization.


* Version 1.2.4 (released 2024-01-22)
- Get connection speed limits (traffic shaping) from RADIUS (#554)
- Fix logging to stderr: add missing newline.
- Fixed compatibility with AnyConnect clients on Linux (#544)
- Detect the new AnyConnect-compatible identifier of OpenConnect clients
- occtl: Print bit rates as kb/s.


* Version 1.2.3 (released 2023-12-17)
- Treat unknown clients as capable of IPv6 routes and DNS servers
- Introduced new ocserv options --log-stderr and --syslog that redirect
  logging to stderr or syslog explicitly. The stderr option allows for better
  integration with logging on containers or under systemd. The default remains
  syslog.
- The bundled protobuf-c was updated to 1.5.0.
- Warn when more than 2 DNS server IPv6 addresses are sent by Radius.
- Improved server shutdown (#563)
- Modified "Camouflage" functionality to allow AnyConnect clients (#544)
- Add initial support for Linux on LoongArch.
- ocserv-fw: Move under libexec.
- ocserv-fw: Fixed clean_all_rules logic on multiple similar devices (!384)